crates/app-admin/src/snapshots/app_admin__tests__snapshot__device_flow_idle.snap
---
source: crates/app-admin/src/tests.rs
expression: term.backend().to_string()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                        ┌ admin · owner login ─────────────────────────────────────────────────┐                        "
"                        │                                                                      │                        "
"                        │                    Owner authentication required.                    │                        "
"                        │                                                                      │                        "
"                        └──────────────────────────────────────────────────────────────────────┘                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
