crates/app-admin/src/snapshots/app_admin__tests__snapshot__device_flow_pending.snap
---
source: crates/app-admin/src/tests.rs
expression: term.backend().to_string()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                        ┌ admin · owner login ─────────────────────────────────────────────────┐                        "
"                        │                                                                      │                        "
"                        │                     Open this URL on any device:                     │                        "
"                        │                       https://google.com/device                      │                        "
"                        └──────────────────────────────────────────────────────────────────────┘                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
