crates/app-admin/src/snapshots/app_admin__tests__snapshot__log_popover.snap
---
source: crates/app-admin/src/tests.rs
expression: term.backend().to_string()
---
"┌ system metrics ──────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│CPU  0.0%  (0 cores)                                                                                                  │"
"│MEM  0.0/0.0 GB  (0.0%)                                                                                               │"
"│SWAP 0/0 MB                                                                                                           │"
"│DISK ┌ logs · sastaspace-stdb ──────────────────────────────────────────────────────────────────────────────────┐     │"
"│NET  │warn   Log line 0: something happened in the module handler                                               │     │"
"│UP   │info   Log line 1: something happened in the module handler                                               │     │"
"│     │info   Log line 2: something happened in the module handler                                               │     │"
"└─────│warn   Log line 3: something happened in the module handler                                               │─────┘"
"┌ cont│info   Log line 4: something happened in the module handler                                               │─────┐"
"│  no │info   Log line 5: something happened in the module handler                                               │     │"
"│     │warn   Log line 6: something happened in the module handler                                               │     │"
"│     │info   Log line 7: something happened in the module handler                                               │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"└─────│                                                                                                          │─────┘"
"┌ mode│                                                                                                          │─────┐"
"│     │                                                                                                          │     │"
"│  no │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     │                                                                                                          │     │"
"│     └ [esc] close ─────────────────────────────────────────────────────────────────────────────────────────────┘     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└ flagged comments · [tab] to focus ───────────────────────────────────────────────────────────────────────────────────┘"
