crates/app-admin/src/snapshots/app_admin__tests__snapshot__metrics_panel.snap
---
source: crates/app-admin/src/tests.rs
expression: term.backend().to_string()
---
"┌ system metrics ──────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│CPU  23.5%  (8 cores)                                                                                                 │"
"│MEM  7.2/15.6 GB  (46.2%)                                                                                             │"
"│SWAP 128/2048 MB                                                                                                      │"
"│DISK 120/500 GB  (24.0%)                                                                                              │"
"│NET  ↑ 123.5 MB  ↓ 987.7 MB                                                                                           │"
"│UP   2d 3h 15m  GPU NVIDIA RTX 3080: 40%                                                                              │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ containers ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  sastaspace-stdb             Up 2 days     mem 512/2048 MB   up 2d 0h 0m                                             │"
"│  moderator-agent             Up 12 hours   mem 64/256 MB     up 12h 0m      restarts:1                               │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ moderation queue ────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│  no flagged comments — queue is clear.                                                                               │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└ flagged comments · [tab] to focus ───────────────────────────────────────────────────────────────────────────────────┘"
