crates/app-admin/src/snapshots/app_admin__tests__snapshot__moderation_queue.snap
---
source: crates/app-admin/src/tests.rs
expression: term.backend().to_string()
---
"┌ system metrics ──────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│CPU  0.0%  (0 cores)                                                                                                  │"
"│MEM  0.0/0.0 GB  (0.0%)                                                                                               │"
"│SWAP 0/0 MB                                                                                                           │"
"│DISK 0/0 GB  (0.0%)                                                                                                   │"
"│NET  ↑ 0 B  ↓ 0 B                                                                                                     │"
"│UP   0m  GPU: n/a                                                                                                     │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ containers ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  no containers — waiting for collector…                                                                              │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ moderation queue ────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  #12     Alice                 [my-first-pos]  Buy cheap Rx at http://spam.example! Great deals.                     │"
"│  #17     Bob                   [another-post]  Inject SQL'; DROP TABLE users; --                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└ [a]pprove [r]eject [d]elete [l]ogs ──────────────────────────────────────────────────────────────────────────────────┘"
